Fix color input border-radius on mobile.

--- a/kit.css
+++ b/kit.css
@@ -277,6 +277,8 @@
   height: 4rem;
   position: relative;
   z-index: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 
   &:focus {
     border-radius: 0.25rem;
